Quick TODO based on some recent events.

--- a/README
+++ b/README
@@ -6,6 +6,9 @@ TODO this is where I mark points where I still have hard-coded configuration
 - filter form method (still says /scans)
 - http.ListenAndServe call (still has 127.0.0.1:6060)
 
+MORE TODO
+- change error handling so that stack traces and other things are printed to standard error
+
 kwikidata schema
 
 
