--- a/README
+++ b/README
@@ -5,6 +5,7 @@ CONTRIBUTING: post on the forum or file an issue here
 TODO this is where I mark points where I still have hard-coded configuration
 - filter form method (still says /scans)
 - http.ListenAndServe call (still has 127.0.0.1:6060)
+- http.Handler() uses /scans - trying to use http.StripPrefix to fix this fails miserably...
 
 MORE TODO
 - change error handling so that stack traces and other things are printed to standard error
